Fix character image sizing on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -211,7 +211,8 @@ Character
 
 */
 .character {
-	position: relative; /**/
+	position: relative;
+	z-index: 0; /* Create new stacking context */
 	box-sizing: border-box;
 	display: grid;
 	grid-template:
@@ -237,12 +238,14 @@ Character
 	max-height: 300px;
 	max-width: 225px;
 	width: fit-content;
+	height: fit-content;
+	z-index: -1;
 }
 .image > img {
 	display: block;
 	margin: auto;
 	object-fit: contain;
-	height: auto;
+	height: 100%;
 	width: -webkit-fill-available;
 	width: -moz-available;
 }
@@ -358,13 +361,13 @@ Changes for mobile
 		position: absolute;
 		bottom: 0;
 		height: calc(100% - 50px);
-		z-index: -1;
 		filter: blur(3px);
 		left: 0;
 		right: 0;
 		margin: auto;
 		max-width: 100%;
 		max-height: 100%;
+		display: flex;
 	}
 	.modal {
 		width: 90%;
